--- a/css/main home.css
+++ b/css/main home.css
@@ -2,6 +2,10 @@
     display: none;
 }
 
+.navbar {
+    display: none;
+}
+
 .secao__apresentacao {
     text-align: center;
     background-color: #111111;
@@ -15,65 +19,6 @@
     left: 1rem;
     width: 50px;
     height: 50px;
-}
-
-/*Overlay Lateral*/
-
-/* The side navigation menu */
-.sidenav {
-    display: flex;
-    flex-direction: column;
-    border-bottom-right-radius: 15px;
-    border-bottom-left-radius: 15px;
-    height: 500px;
-    /* 100% Full-height */
-    width: 0;
-    /* 0 width - change this with JavaScript */
-    position: absolute;
-    /* Stay in place */
-    z-index: 1;
-    /* Stay on top */
-    top: 120px;
-    /* Stay at the top */
-    left: 0;
-    background-color: #111;
-    /* Black*/
-    overflow-x: hidden;
-    /* Disable horizontal scroll */
-    padding-top: 60px;
-    /* Place content 60px from the top */
-    transition: 0.5s;
-    /* 0.5 second transition effect to slide in the sidenav */
-}
-
-.img__sidenav {
-    margin-bottom: 1rem;
-}
-
-/* The navigation menu links */
-.sidenav a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-    transition: 0.3s;
-}
-
-/*Fim Overlay Lateral*/
-
-/* Position and style the close button (top right corner) */
-.sidenav .closebtn {
-    color: white;
-    top: 25rem;
-    right: 11rem;
-    font-size: 50px;
-}
-
-/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
-#main {
-    transition: margin-left .5s;
-    padding: 20px;
 }
 
 .titulo__principal {
@@ -124,6 +69,7 @@
 }
 
 @media screen and (min-width: 992px) {
+    
     .secao__wiki {
         display: none;
     }   
@@ -146,54 +92,6 @@
 
     .navbar {
         display: block;
-    }
-
-    .navbar {
-        position: relative;
-    }
-
-    .bg-company-brown {
-        background-color: #111111!important;
-    }
-
-    .cor__fundo {
-        background-color: #111111;
-        color: #111111;
-    }
-
-    .offcanvas-title {
-        margin: 0 auto;
-        color: white;
-    }
-
-    .img__lobo {
-        margin-bottom: 3rem;
-    }
-
-    .centralizar__nav {
-        text-align: center;
-    }
-
-    .offcanvas-title {
-        font-family: "die";
-    }
-
-    .nav-item {
-        font-family: "die";
-        font-size: 1.5rem;
-    }
-
-    .links {
-        text-align: center;
-        margin-bottom: 1rem;
-    }
-
-    .centralizar__copyright {
-        text-align: center;
-    }
-
-    .copyright {
-        color: white;
     }
 
     .secao__apresentacao {
