--- a/css/main witcher 3 home.css
+++ b/css/main witcher 3 home.css
@@ -1,4 +1,12 @@
-@import url(styles.css);
+/* Displays None */
+.navbar {
+    display: none;
+}
+
+.titulo__principal--desk {
+    display: none;
+    ;
+}
 
 .secao__apresentacao {
     text-align: center;
@@ -7,6 +15,10 @@
     padding: 0.5rem 0;
     border-radius: 5px;
     height: auto;
+}
+
+.ativo {
+    color: var(--marrom-principal);
 }
 
 .burguer {
@@ -22,71 +34,9 @@
     font-weight: 700;
 }
 
-/*Overlay Lateral*/
-
-/* The side navigation menu */
-.sidenav {
-    display: flex;
-    flex-direction: column;
-    border-bottom-right-radius: 15px;
-    border-bottom-left-radius: 15px;
-    height: auto;
-    /* 100% Full-height */
-    width: 0;
-    /* 0 width - change this with JavaScript */
-    position: absolute;
-    /* Stay in place */
-    z-index: 1;
-    /* Stay on top */
-    top: 120px;
-    /* Stay at the top */
-    left: 0;
-    background-color: #111;
-    /* Black*/
-    overflow-x: hidden;
-    /* Disable horizontal scroll */
-    padding-top: 60px;
-    /* Place content 60px from the top */
-    transition: 0.5s;
-    /* 0.5 second transition effect to slide in the sidenav */
-}
-
-.img__sidenav {
-    margin-bottom: 1rem;
-}
-
-/* The navigation menu links */
-.sidenav a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-    transition: 0.3s;
-}
-
-/* Position and style the close button (top right corner) */
-.sidenav .closebtn {
-    color: white;
-    top: 25rem;
-    right: 11rem;
-    font-size: 50px;
-}
-
-/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
-#main {
-    transition: margin-left .5s;
-    padding: 20px;
-}
-
 .descricao__icone {
     color: white;
 }
-
-.ativo {
-    color: var(--marrom-principal);
-}
-/*Fim Overlay Lateral*/
 
 .conteudo__texto {
     margin-top: 2rem;
@@ -123,4 +73,131 @@
     padding: 0.5rem 2rem;
     border-radius: 15px;
     margin: 1rem 0;
+}
+
+/* Card */
+
+.card {
+    background-color: black;
+    margin: 1rem auto;
+    width: 20rem;
+    padding: 0.5rem;
+}
+
+.list-group {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.list-group-item {
+    background-color: black;
+    color: white;
+}
+
+.list-item-destaque {
+    color: var(--marrom-principal);
+    text-decoration: underline;
+}
+
+.list-item {
+    background-color: black;
+    color: white;
+}
+
+.list-item:last-child {
+    margin-bottom: 2rem;
+}
+
+.card-img {
+    padding: 0.5rem 0;
+}
+
+/* Modal */
+
+.modal-content {
+    background-color: #111111;
+}
+
+.ul__imgs {
+    padding: 0;
+}
+
+.img__gallery {
+    width: 100%;
+    padding: 0.5rem 0;
+}
+
+.modal-footer {
+    border-top: 2px solid black;
+}
+
+@media screen and (min-width: 992px) {
+    
+    /* Displays None */
+    .apresentacao {
+        display: none;
+    }
+
+    .pontos {
+        display: none;
+    }
+
+    .pontosEnredo {
+        display: none;
+    }
+
+    .botaoLerMaisEnredo {
+        display: none;
+    }
+
+    .botaoLerMais {
+        display: none;
+    }
+
+    /* Displays Block */
+    
+    .navbar {
+        display: block;
+    }
+
+    .titulo__principal--desk {
+        display: block;
+    }
+
+    #mais {
+        display: block;
+    }
+    #maisEnredo {
+        display: block;
+    }
+
+
+    .secao__apresentacao {
+        display: flex;
+    }
+
+    .game__descricao {
+        line-height: 3rem;
+    }
+
+    .conteudo__texto {
+        line-height: 3rem;
+    }
+
+    .lateral__cards {
+        padding: 0.5rem 0.5rem;
+    }
+
+    .card {
+        margin: 0;
+    }
+
+    .card__margin--desk {
+        margin: 0;
+        margin-bottom: 1rem;
+    }
+
+    .card-img {
+        cursor: pointer;
+    }
 }
